--- a/app/assets/sass/colors.scss
+++ b/app/assets/sass/colors.scss
@@ -1,6 +1,5 @@
 @import '../../../vendor/sass-mq/mq';
 
-
 $c-black: #000;
 $c-white: #fff;
 $c-pink: #D77869;
@@ -10,29 +9,22 @@ $c-warmgrey:#A396A3;
 $c-purple:#347E84;
 $c-aquablue:#C8C2BE;
 
-.c-black {color:$c-black;}
+$array: (black, $c-black), (white, $c-white), (pink, $c-pink), (seagreen, $c-seagreen), (lightwarmgrey, $c-lightwarmgrey), (warmgrey, $c-warmgrey), (purple, $c-purple), (aquablue, $c-aquablue);
 
-.c-white {color:$c-white;}
+@each $colorname, $colorvalue in $array{
+    .c-#{$colorname}{
+        color: $colorvalue;
+    }
+}
 
-.c-pink {color:$c-pink}
 
-.c-seagreen {color:$c-seagreen;}
+@each $colorname, $colorvalue in $array{
+    .c-bg-#{$colorname}{
+        background-color: $colorvalue;
+    }
+}
 
-.c-lightwarmgrey {color:$c-lightwarmgrey;}
 
-.c-warmgrey {color:$c-warmgrey;}
-
-.c-purple {color:$c-purple;}
-
-.c-aquablue {color:$c-aquablue;}
-
-.c-bg-black {background-color:$c-black;}
-
-.c-bg-white {background-color:$c-white;}
-
-.c-bg-pink {background-color:$c-pink}
-
-.c-bg-seagreen {background-color:$c-seagreen;}
 
 .c-bg-lightwarmgrey {background-color:$c-lightwarmgrey;}
 
