Fixed color references for variables
Signed-off-by: Kenneth Dahlstrøm <kenneth@keda.no>

--- a/app/assets/sass/colors.scss
+++ b/app/assets/sass/colors.scss
@@ -5,9 +5,9 @@ $c-white: #fff;
 $c-pink: #D77869;
 $c-seagreen: #6FC2B4;
 $c-lightwarmgrey:#ECEAE5;
-$c-warmgrey:#A396A3;
-$c-purple:#347E84;
-$c-aquablue:#C8C2BE;
+$c-warmgrey:#C8C2BE;
+$c-purple:#A396A3;
+$c-aquablue:#347E84;
 
 $array: (black, $c-black), (white, $c-white), (pink, $c-pink), (seagreen, $c-seagreen), (lightwarmgrey, $c-lightwarmgrey), (warmgrey, $c-warmgrey), (purple, $c-purple), (aquablue, $c-aquablue);
 
