--- a/app/assets/sass/colors.scss
+++ b/app/assets/sass/colors.scss
@@ -66,21 +66,17 @@ $c-lightwarmgrey:#ECEAE5;
 $c-warmgrey:#C8C2BE;
 $c-purple:#A396A3;
 $c-aquablue:#347E84;
-$array: (black, $c-black), (white, $c-white), (pink, $c-pink), (seagreen, $c-seagreen), (lightwarmgrey, $c-lightwarmgrey), (warmgrey, $c-warmgrey), (purple, $c-purple), (aquablue, $c-aquablue);
-$tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
+$hiof-blue: #073B58;
+$color-primary-action: #3276b1;
+$navbar-default-link-color: $color-primary-action;
+$black: $c-black;
+$white: $c-white;
+$array: (black: $c-black, white: $c-white, pink: $c-pink, seagreen: $c-seagreen, lightwarmgrey: $c-lightwarmgrey, warmgrey: $c-warmgrey, purple: $c-purple, aquablue: $c-aquablue);
+$tints: (85: .85, 60: .60, 45: .45, 30: .30, 15: .15);
 ```
 */
 
-$c-black: #000;
-$c-white: #fff;
-$c-pink: #D77869;
-$c-seagreen: #6FC2B4;
-$c-lightwarmgrey:#ECEAE5;
-$c-warmgrey:#C8C2BE;
-$c-purple:#A396A3;
-$c-aquablue:#347E84;
-$array: (black, $c-black), (white, $c-white), (pink, $c-pink), (seagreen, $c-seagreen), (lightwarmgrey, $c-lightwarmgrey), (warmgrey, $c-warmgrey), (purple, $c-purple), (aquablue, $c-aquablue);
-$tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
+@import "_variables";
 
 /*
 ### Color class-helpers
@@ -88,13 +84,7 @@ $tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
 
 /*
 #### Generate class-helpers for each text-color
-```
-@each $colorname, $colorvalue in $array{
-    .c-#{$colorname}{
-        color: $colorvalue;
-    }
-}
-```
+
 
 ##### Generated values
 
@@ -121,21 +111,15 @@ $tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
 
 */
 
-
 @each $colorname, $colorvalue in $array{
     .c-#{$colorname}{
         color: $colorvalue;
     }
 }
+
 /*
 #### Generate class-helpers for each background-color
-```
-@each $colorname, $colorvalue in $array{
-    .c-bg-#{$colorname}{
-        background-color: $colorvalue;
-    }
-}
-```
+
 
 ##### Generated values:
 
@@ -170,15 +154,7 @@ $tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
 
 /*
 #### Generate class-helpers for each text-color tints
-```
-@each $colorname, $colorvalue in $array{
-    @each $tintname, $tintvalue in $tints{
-      .c-#{$colorname}--tint__#{$tintname}{
-          color: rgba($colorvalue, $tintvalue);
-      }
-    }
-}
-```
+
 */
 
 @each $colorname, $colorvalue in $array{
@@ -191,15 +167,7 @@ $tints: (85, .85), (60, .60), (45, .45), (30, .30), (15, .15);
 
 /*
 #### Generate class-helpers for each background-color tints
-```
-@each $colorname, $colorvalue in $array{
-    @each $tintname, $tintvalue in $tints{
-      .bg-#{$colorname}--tint__#{$tintname}{
-          background-color: rgba($colorvalue, $tintvalue);
-      }
-  }
-}
-```
+
 */
 
 @each $colorname, $colorvalue in $array{
